--- a/hMailServer/packages.config
+++ b/hMailServer/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="ARSoft.Tools.Net" version="2.2.5" targetFramework="net452" />
   <package id="BouncyCastle" version="1.8.1" targetFramework="net452" />
+  <package id="MimeKit" version="1.4.1" targetFramework="net452" />
   <package id="NLog" version="4.3.5" targetFramework="net452" />
   <package id="NLog.Config" version="4.3.5" targetFramework="net452" />
   <package id="NLog.Schema" version="4.3.4" targetFramework="net452" />
